# whiteborad-monitor

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  vcpkg-configuration.json  vcpkg.json
monitor/: CMakeLists.txt  monitor.cc  run.cc
monitor_app/: CMakeLists.txt  main.cc  monitor.cc  run.hh
monitor_lib/: CMakeLists.txt  file_debug_info.cc  file_debug_info.hh  logging.cc  logging.hh  mem_maps.cc  mem_maps.hh  monitor.cc  monitor.hh  process_debug_info.cc  process_debug_info.hh  registers.cc  registers.hh  source_location.h  source_location.hh  word.hh
monitor_lib/include/monitor_lib/: monitor.hh
test_programs/: CMakeLists.txt  push_back.cc  simple_allocation.cc
vcpkg-registry/: README.md
vcpkg-registry/ports/intel-xed/: portfile.cmake
vcpkg-registry/ports/intel-xed/v2024.09.09/: vcpkg.json
vcpkg-registry/versions/: baseline.json
vcpkg-registry/versions/i-/: intel-xed.json
